objects/vlocity_cmt__MediaProperty__c.object
<CustomObject>
    <description>The Media Property defines a web page, a TV program, or a publication. A media property may contain one to many Ad Spaces, into which Ad Servers can place or serve up ad creatives</description>
    <fields>
        <fullName>vlocity_cmt__AvailableLanguages__c</fullName>
        <description>Captures the language of the content hosted on the media property.</description>
        <label>Available Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MediaType__c</fullName>
        <description>Media Type</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingCategory__c</fullName>
        <description>This field categorises the Media Property as Premium or not from an advertising pricing perspective. &quot;Premium&quot; is an evaluation based on traffic, Nielsen ratings or Comscore rank.</description>
        <label>Pricing Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PublicationFrequency__c</fullName>
        <label>PublicationFrequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PublisherId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the Publisher of the MediaProperty record.</description>
        <label>Publisher</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Properties</relationshipLabel>
        <relationshipName>MediaProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PublisherPrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Properties</relationshipLabel>
        <relationshipName>MediaProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ScheduledAirEndTime__c</fullName>
        <description>This captures the end time of the show.</description>
        <label>Scheduled Air End time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ScheduledAirStartTime__c</fullName>
        <description>This captures the start time of the show. If the show is going air more than once in a day OR if the show runs on different times over the week, this implementation does not support these capabilities.</description>
        <label>Scheduled Air Start time</label>
        <type>Time</type>
    </fields>
    <label>Media Property</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>